# tfmodisco

./: .gitignore  .travis.yml  CHANGELOG  LICENSE  MANIFEST.in  README.md  modisco  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml
examples/: Example analysis.ipynb  For Figure Generation.ipynb  MergeMotifsAcrossRuns.ipynb  ModiscoDemonstration.ipynb  grab_data.sh
modisco/: README.md  __init__.py  affinitymat.py  aggregator.py  bruteforce_nn.py  cluster.py  clustering.py  coord_producers.py  coordproducers.py  core.py  gammamix.py  map_seqlets_to_clusters.py  metaclusterers.py  nearest_neighbors.py  pattern_filterer.py  seqlets_to_patterns.py  sketch_workflow.py  sliding_similarities.py  transform_and_threshold.py  util.py  value_provider.py  workflow.py
modisco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
modiscolite/: __init__.py  affinitymat.py  aggregator.py  bed_writer.py  cli.py  cluster.py  coordproducers.py  core.py  descriptive_report.py  extract_seqlets.py  fasta_writer.py  gapped_kmer.py  io.py  meme_writer.py  metaclusterers.py  report.py  seqlets_to_patterns.py  tfmodisco.py  util.py  value_provider.py
motif_hit/: IncrWorkflowExample.py  incr_workflow.py  merge_overlaps.py  motif_hits.py  run_incr_tfmodisco.py  seqlets_to_metacluster.py
scripts/: tfmodisco.py
test/: .gitignore  test_affinitymat.py  test_cluster.py  test_coordproducers.py  test_core.py  test_correlation.py  test_jaccardify.py  test_sliding_similarity.py  test_tfmodisco_workflow.py
tests/: conftest.py  test_motif.py
(+134 files in other folders)
